# sql-query-optimization-benchmarking

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  VERSIONS.md  config.yaml  docker-compose.yml  pyproject.toml
benchmarks/: analyze_results.py  apply_indexes.py  explain.py  load_data.py  plot_results.py  run_all_benchmarks.py  run_benchmarks.py
data/raw/: categories.csv  customers.csv  generate_data.py  order_items.csv  orders.csv  products.csv
scripts/: apply_schema.py  docker_entrypoint.sh  setup_db.ps1  setup_db.sh
sql/: drop_indexes.sql  indexes.sql  queries.sql  schema.sql
